unpackaged/main/default/objects/Account_Team_Assignment_Additional_Rule__c/Account_Team_Assignment_Additional_Rule__c.object-meta.xml
<CustomObject>
    <label>Account Team Assignment Additional Rules</label>
    <nameField>
        <displayFormat>ATAAR-{0000}</displayFormat>
        <label>Account Team Assignment Additional Rules</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Assignment Additional Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>