unpackaged/main/default/objects/Account_Team_Assignment_Additional_Rule__c/fields/Blue_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Blue_Partner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blue Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Assignment Additional Rules</relationshipLabel>
    <relationshipName>Account_Team_Assignment_Additional_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>