unpackaged/main/default/objects/Account_Team_Assignment_Additional_Rule__c/fields/Group_Size_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Group_Size_Upper_Limit__c</fullName>
    <label>Group Size Upper Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>