unpackaged/main/default/objects/Account_Team_Assignment_Additional_Rule__c/fields/Have_Asset__c.field-meta.xml
<CustomField>
    <fullName>Have_Asset__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Have Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>