unpackaged/main/default/objects/Account_Team_Assignment_Additional_Rule__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>