unpackaged/main/default/objects/Account_Team_Assignment_Additional_Rule__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team_Assignment_Additional_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>