unpackaged/main/default/objects/Account_Team_Assignment_Additional_Rule__c/listViews/All_Additional_Rules.listView-meta.xml
<ListView>
    <fullName>All_Additional_Rules</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Blue_Partner_Id__c</columns>
    <columns>Group_Size_Lower_Limit__c</columns>
    <columns>Group_Size_Upper_Limit__c</columns>
    <columns>Have_Asset__c</columns>
    <columns>Key_Client__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Additional Rules</label>
</ListView>